(chore) Fix hljs-attribute color in stackoverflow-dark (#3186)

--- a/src/styles/stackoverflow-dark.css
+++ b/src/styles/stackoverflow-dark.css
@@ -27,7 +27,7 @@
 }
 
 .hljs-attribute {
-  color: v#c59bc1;
+  color: #c59bc1;
 }
 
 .hljs-name,
